on comment tag for form auth

--- a/index.html
+++ b/index.html
@@ -67,10 +67,10 @@
 	<div id="noscript"><h3>Attention! Disabled JavaScript!</h3><p>To use the Web application WaspAce, you must enable javascript in your browser.</p></div>
 	<div id="noscript"><h3>Увага! Вимкнено JavaScript!</h3><p>Для роботи веб-додатки WaspAce, необхідно включити javascript в вашому браузері.</p></div>
 </noscript>
-<!--<form name="form-spec-auth" target="iframe-auth" method="post" style="position: fixed; top: 0; left: 0;">
+<form name="form-spec-auth" target="iframe-auth" method="post" style="position: fixed; top: 0; left: 0;">
 	<input type="text" name="wa_email" />
 	<input type="password" name="wa_password" />
 	<input type="submit" name="submit" id="submit" value="go" />
-</form>-->
+</form>
 </body>
 </html>
