--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 <form name="form-spec-auth" target="iframe-auth" method="post" style="position: fixed; top: 0; left: 0;">
 	<input type="text" name="wa_email" />
 	<input type="password" name="wa_password" />
-	<input type="submit" name="submit" id="submit" value="go" />
+	<input type="submit" name="submit" id="submit" value="go" />123
 </form>
 </body>
 </html>
