--- a/w-geo-2.html
+++ b/w-geo-2.html
@@ -285,18 +285,44 @@
                                 <tbody>
                                 <tr>
                                     <td class="a2">RU</td>
-                                    <td class="name"><span class="link-popup">Российская Федерация</span></td>
-                                    <td class="option"><span class="iconbox"><b class="item delete"></b></span></td>
-                                    <td class="range-view"><span class="mark-box">47%<b class="mark"
-                                                                                        style="width:47%;"></b></span>
+                                    <td class="name">
+                                        <span class="link-popup">Российская Федерация</span>
+                                    </td>
+                                    <td class="option">
+                                        <span class="iconbox">
+                                            <b class="item delete"></b>
+                                        </span>
+                                    </td>
+                                    <td class="range-view">
+                                        <span class="mark-box" tooltip="Настроено">47%
+                                            <b class="mark" style="width:47%;"></b>
+                                        </span>
+                                    </td>
+                                    <td class="range-view">
+                                        <span class="mark-box" tooltip="Получено">25%
+                                            <b class="mark recd" style="width:25%;"></b>
+                                        </span>
                                     </td>
                                 </tr>
                                 <tr>
                                     <td class="a2">UK</td>
-                                    <td class="name"><span class="link-popup">Украина</span></td>
-                                    <td class="option"><span class="iconbox"><b class="item delete"></b></span></td>
+                                    <td class="name">
+                                        <span class="link-popup">Украина</span>
+                                    </td>
+                                    <td class="option">
+                                        <span class="iconbox">
+                                            <b class="item delete"></b>
+                                        </span>
+                                    </td>
                                     <td class="range-view">
-                                        <span class="mark-box">0%<b class="mark" style="width:0%;"></b></span>
+                                        <span class="mark-box" tooltip="Настроено">0%
+                                            <b class="mark" style="width:0%;"></b>
+                                        </span>
+                                    </td>
+                                    <td class="range-view">
+                                        <span class="mark-box" tooltip="Получено">0%
+                                            <b class="mark recd" style="width:0%;"></b>
+                                        </span>
                                     </td>
                                 </tr>
                                 </tbody>
