--- a/w-geo-2.html
+++ b/w-geo-2.html
@@ -330,7 +330,8 @@
                         </div>
                         <div class="footer">
                             <div id="m_buttons">
-                                <span class="bt">Сохранить</span><span class="bt gray">Отмена</span>
+                                <span class="bt">Сохранить</span>
+                                <span class="bt gray">Отмена</span>
                             </div>
                         </div>
                     </div>
