--- a/w-geo-2.html
+++ b/w-geo-2.html
@@ -294,9 +294,9 @@
                                         </span>
                                     </td>
                                     <td class="range-view">
-                                        <span class="mark-box" tooltip="Настроено">47%
-                                            <b class="mark" style="width:47%;"></b>
-                                            <b class="mark recd" style="width:25%;"></b>
+                                        <span class="mark-box">47%
+                                            <b class="mark" style="width:90%;"></b>
+                                            <b class="mark recd" style="width:68%;"></b>
                                         </span>
                                     </td>
                                 </tr>
@@ -311,7 +311,7 @@
                                         </span>
                                     </td>
                                     <td class="range-view">
-                                        <span class="mark-box" tooltip="Настроено">0%
+                                        <span class="mark-box">0%
                                             <b class="mark" style="width:0%;"></b>
                                         </span>
                                     </td>
