--- a/w-geo-2.html
+++ b/w-geo-2.html
@@ -294,7 +294,8 @@
                                         </span>
                                     </td>
                                     <td class="range-view">
-                                        <span class="mark-box">47%
+                                        <span class="mark-box">
+                                            <span class="text">47%</span>
                                             <b class="mark" style="width:90%;"></b>
                                             <b class="mark recd" style="width:68%;"></b>
                                         </span>
@@ -311,8 +312,10 @@
                                         </span>
                                     </td>
                                     <td class="range-view">
-                                        <span class="mark-box">0%
+                                        <span class="mark-box">
+                                            <span class="text">0%</span>
                                             <b class="mark" style="width:0%;"></b>
+                                            <b class="mark recd" style="width:0%;"></b>
                                         </span>
                                     </td>
                                 </tr>
