--- a/w-geo.html
+++ b/w-geo.html
@@ -39,23 +39,23 @@
                             <b>%</b>
                             </div>
                             <div class="clear"></div>
-                            <div class="range-box" style="width: 440px">
+                            <div class="range-box">
                                 <div class="range-bg" style="width: 47%"></div>
                                 <div class="handle" style="left:47%;"></div>
+                                <ul class="numbers">
+                                    <li>0</li>
+                                    <li>10</li>
+                                    <li>20</li>
+                                    <li>30</li>
+                                    <li>40</li>
+                                    <li>50</li>
+                                    <li>60</li>
+                                    <li>70</li>
+                                    <li>80</li>
+                                    <li>90</li>
+                                    <li>100</li>
+                                </ul>
                             </div>
-                            <ul class="numbers">
-                                <li>0</li>
-                                <li>10</li>
-                                <li>20</li>
-                                <li>30</li>
-                                <li>40</li>
-                                <li>50</li>
-                                <li>60</li>
-                                <li>70</li>
-                                <li>80</li>
-                                <li>90</li>
-                                <li>100</li>
-                            </ul>
                         </div>
                     </div>
                     <div class="footer">
