изменено окно настройки гео для заданий, добавлены необходимые для этого контролы

--- a/index.html
+++ b/index.html
@@ -6,20 +6,20 @@
     <meta name="robots" content="index, follow" />
     <meta name="keywords" content="" />
     <meta name="description" content="" />
-    <link type="text/css" rel="stylesheet" href="http://manager.waspace.net/css/main.css" />
+    <link type="text/css" rel="stylesheet" href="css/main.css" />
     <!--[if lte IE 9]>
-    <link href="http://manager.waspace.net/css/ie9.css" type="text/css" rel="stylesheet">
+    <link href="css/ie9.css" type="text/css" rel="stylesheet">
     <![endif]-->
     <!--[if lte IE 8]>
-    <link href="http://manager.waspace.net/css/ie8.css" type="text/css" rel="stylesheet">
+    <link href="css/ie8.css" type="text/css" rel="stylesheet">
     <![endif]-->
     <!--[if lte IE 7]>
-    <link href="http://manager.waspace.net/css/ie7.css" type="text/css" rel="stylesheet">
+    <link href="css/ie7.css" type="text/css" rel="stylesheet">
     <![endif]-->
     <!--[if lte IE 6]>
-    <link href="http://manager.waspace.net/css/ie6.css" type="text/css" rel="stylesheet">
+    <link href="css/ie6.css" type="text/css" rel="stylesheet">
     <![endif]-->
-	<link href="http://manager.waspace.net/favicon.ico" rel="shortcut icon" type="image/x-icon">
+	<link href="favicon.ico" rel="shortcut icon" type="image/x-icon">
     <script type="text/javascript" src="js/jquery/jquery-1.7.2.min.js"></script>
     <script type="text/javascript" src="js/jquery/jquery.json-2.3.js"></script>
 	<script type="text/javascript" src="js/jquery/jquery.browser.mobile.js"></script>
