--- a/w-geo.html
+++ b/w-geo.html
@@ -29,34 +29,37 @@
                 </div>
                 <div class="all">
                     <div class="content">
-
-                        <div class="country">
-                            <div class="name">Российская федерация</div>
-                            <div class="rate">
-                            <span class="textline percent">
-                                  <input name="" type="text" value="47">
-                            </span>
-                            <b>%</b>
-                            </div>
-                            <div class="clear"></div>
-                            <div class="range-box">
-                                <div class="range-bg" style="width: 47%"></div>
-                                <div class="handle" style="left:47%;"></div>
-                                <ul class="numbers">
-                                    <li>0</li>
-                                    <li>10</li>
-                                    <li>20</li>
-                                    <li>30</li>
-                                    <li>40</li>
-                                    <li>50</li>
-                                    <li>60</li>
-                                    <li>70</li>
-                                    <li>80</li>
-                                    <li>90</li>
-                                    <li>100</li>
-                                </ul>
-                            </div>
-                        </div>
+                        <div id="text" style="visibility: hidden; opacity: 0; display: none;"></div>
+                        <ul id="areaset" style="visibility: visible; opacity: 1;">
+                            <li class="set" style="display: none;"></li>
+                            <li>
+                                <div class="country">
+                                    <div class="name"> Австрия</div>
+                                    <div class="rate"><span class="textline percent"
+                                                            style="visibility: visible; opacity: 1;"><input type="text"
+                                                                                                            readonly="readonly"></span><b>%</b>
+                                    </div>
+                                    <div class="clear"></div>
+                                    <div class="range-box" style="visibility: visible; opacity: 1;">
+                                        <div class="range-bg" style="width: 0%;"></div>
+                                        <div class="handle" style="left: 0%;"></div>
+                                        <ul class="numbers">
+                                            <li>0</li>
+                                            <li>10</li>
+                                            <li>20</li>
+                                            <li>30</li>
+                                            <li>40</li>
+                                            <li>50</li>
+                                            <li>60</li>
+                                            <li>70</li>
+                                            <li>80</li>
+                                            <li>90</li>
+                                            <li>100</li>
+                                        </ul>
+                                    </div>
+                                </div>
+                            </li>
+                        </ul>
                     </div>
                     <div class="footer">
                         <div id="m_buttons">
