--- a/checkbox&text.html
+++ b/checkbox&text.html
@@ -6,7 +6,7 @@
     <meta name="robots" content="index, follow"/>
     <meta name="keywords" content=""/>
     <meta name="description" content=""/>
-    <link type="text/css" rel="stylesheet" href="http://manager.waspace.net/css/main.css"/>
+    <link type="text/css" rel="stylesheet" href="css/main.css"/>
 </head>
 <body>
 <span class="checkbox-container">
