--- a/w-transfer.html
+++ b/w-transfer.html
@@ -40,9 +40,13 @@
                             <li class="set">
                                 Кредитов для перевода
                             </li>
-                            <li><span class="textline">
-                                <input name="" type="text" value="10000">
-                            </span>
+                            <li>
+                                <div class="inblock" style="visibility: visible; opacity: 1;"><span
+                                        class="textline float"
+                                        tooltip="Введите колличество кредитов, которое вы хотите перевести."
+                                        style="visibility: visible; opacity: 1;" tooltip_state="true"><input
+                                        type="text"></span><span id="rangebox"><b class="range top"></b><b
+                                        class="range bottom"></b></span></div>
                             </li>
                             <li class="set">
                                 С учетом комисси это составит
